--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -185,13 +185,13 @@
         
                                     <div id="savePatternPanel" class="panel-collapse collapse in">
                                         <div class="panel-body form-inline">
-                                            <input type="text" style="min-width: 50%" class="form-control" id="newFilterLibraryName" placeholder="Name">
+                                            <input type="text" maxlength="64" style="min-width: 50%" class="form-control" id="newFilterLibraryName" placeholder="Name">
                                             <a class="btn btn-default" onclick="saveToLibrary()">Save</a>
                                         </div>
                                     </div>
                                 </div>
                                 {% if userLibraries|length > 0 %}
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" id="userPatterns">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a class="no-decoration" data-toggle="collapse" data-target="#userPatternsPanel">Your patterns</a>
@@ -199,22 +199,22 @@
                                         </div>
                                         <div id="userPatternsPanel" class="panel-collapse collapse in">
                                             <div class="panel-body form-inline">
-                                                <select style="min-width: 50%" class="form-control" id="userFilterLibraryId">
+                                                <select style="min-width: 50%" class="form-control" id="userPatternsSelect">
                                                     {% for field in userLibraries %}
                                                         <option value="{{ field.id }}">{{ field.name }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <a class="btn btn-default" onclick="loadFromLibrary('userFilterLibraryId')">Load</a>
-                                                <a class="btn btn-danger" onclick="deleteFromLibrary('userFilterLibraryId')">Delete</a>
+                                                <a class="btn btn-default" onclick="loadFromLibrary('userPatterns')">Load</a>
+                                                <a class="btn btn-danger" onclick="deleteFromLibrary('userPatterns')">Delete</a>
                                                 {% if admin.admingroup %}
-                                                    <a class="btn btn-info" onclick="toggleSharedPattern('userFilterLibraryId')">Share pattern</a>
+                                                    <a class="btn btn-info" onclick="toggleSharedPattern('userPatterns')">Share pattern</a>
                                                 {% endif %}
                                             </div>
                                         </div>
                                     </div>
                                 {% endif %}
                                 {% if sharedLibraries|length > 0 %}
-                                    <div class="panel panel-default">
+                                    <div class="panel panel-default" id="sharedPatterns">
                                         <div class="panel-heading">
                                             <h4 class="panel-title">
                                                 <a class="no-decoration" data-toggle="collapse" data-target="#sharedPatternsPanel">Shared patterns</a>
@@ -222,15 +222,15 @@
                                         </div>
                                         <div id="sharedPatternsPanel" class="panel-collapse collapse in">
                                             <div class="panel-body form-inline">
-                                                <select style="min-width: 50%" class="form-control" id="sharedFilterLibraryId">
+                                                <select style="min-width: 50%" class="form-control" id="sharedPatternsSelect">
                                                     {% for field in sharedLibraries %}
                                                         <option value="{{ field.id }}">{{ field.name }}</option>
                                                     {% endfor %}
                                                 </select>
-                                                <a class="btn btn-default" onclick="loadFromLibrary('sharedFilterLibraryId')">Load</a>
+                                                <a class="btn btn-default" onclick="loadFromLibrary('sharedPatterns')">Load</a>
                                                 {% if admin.admingroup %}
-                                                    <a class="btn btn-danger" onclick="deleteFromLibrary('sharedFilterLibraryId')">Delete</a>
-                                                    <a class="btn btn-warning" onclick="toggleSharedPattern('sharedFilterLibraryId')">Retain pattern</a>
+                                                    <a class="btn btn-danger" onclick="deleteFromLibrary('sharedPatterns')">Delete</a>
+                                                    <a class="btn btn-warning" onclick="toggleSharedPattern('sharedPatterns')">Retain pattern</a>
                                                 {% endif %}
                                             </div>
                                         </div>
