--- a/openrem/remapp/templates/remapp/dxfiltered.html
+++ b/openrem/remapp/templates/remapp/dxfiltered.html
@@ -61,102 +61,6 @@
 
     {{ studyfilter }}
 
-    <form action="{% url 'dx_summary_list_filter' %}" method="get" class="form-horizontal" role="form"
-          id="examFilterForm">
-        <div class="panel panel-info small">
-            <div class="panel-heading">
-                <h3 class="panel-title">Exam filter</h3>
-            </div>
-            <div class="panel-body">
-                <em>Date format yyyy-mm-dd</em>
-                {% for field in filter.form.visible_fields %}
-                    <div class="form-group">
-                        <div class="col-xs-4">
-                            <label>{{ field.label_tag }}</label>
-                        </div>
-                        <div class="col-xs-8">
-                            {{ field.errors }}
-                            {{ field }}
-                        </div>
-                    </div>
-                {% endfor %}
-                {% for field in filter.form.hidden_fields %}
-                    <div style="display:none">{{ field }}</div>
-                {% endfor %}
-                <input class="btn btn-default" name="submit" type="submit"/>
-            </div>
-
-            <div class="panel-heading">
-                <h3 class="panel-title">Chart options</h3>
-            </div>
-
-            <div class="panel-body">
-
-                {% csrf_token %}
-                {% regroup chartOptionsForm by field.group as field_groups %}
-
-                {% for field_group in field_groups %}
-
-                    {% if field_group.grouper == 'PlotCharts' %}
-                        <div class="panel panel-default">
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <label style="font-weight: normal" for="{{ field_group.list.0.auto_id }}">{{ field_group.list.0.label }}</label>&nbsp;{{ field_group.list.0 }}
-                                </h4>
-                            </div>
-                        </div>
-                    {% else %}
-                        <div class="panel panel-default">
-
-                            <div class="panel-heading">
-                                <h4 class="panel-title">
-                                    <a class="no-decoration" data-toggle="collapse" data-target="#{{ field_group.grouper|cut:" " }}">{{ field_group.grouper }}</a>
-                                </h4>
-                            </div>
-
-                            <div id="{{ field_group.grouper|cut:" " }}" class="panel-collapse collapse in">
-                                <div class="panel-body">
-
-                                    <table class="table table-condensed">
-                                    {% for field in field_group.list %}
-                                        <tr>
-                                        {% if field.field.widget.attrs.class == 'CheckboxSelectMultiple' %}
-                                            <td class="shaded_top_bottom_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
-                                            <td class="shaded_top_bottom_border">{{ field }}</td>
-                                        {% elif field.label == 'Acquisition frequency' or field.label == 'Study frequency' or field.label == 'Requested procedure frequency' or field.label == 'Time period' %}
-                                            <td class="top_border"><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
-                                            <td class="top_border">{{ field }}</td>
-                                        {% else %}
-                                            <td><label for="{{ field.auto_id }}">{{ field.label }}</label></td>
-                                            <td>{{ field }}</td>
-                                        {% endif %}
-                                        </tr>
-                                    {% endfor %}
-                                    </table>
-
-                                </div>
-                            </div>
-
-                        </div>
-                    {% endif %}
-
-                {% endfor %}
-
-                <input class="btn btn-default" name="submit" type="submit" id="examFilterFormSubmit"/>
-            </div>
-
-            <div class="panel-heading">
-                <h3 class="panel-title">Table options</h3>
-            </div>
-            <div class="panel-body">
-                <table aria-describedby="Number of rows per page option">
-                    {{ itemsPerPageForm }}
-                </table>
-                <input class="btn btn-default" name="submit" type="submit"/>
-            </div>
-        </div>
-    </form>
-
 {% endblock %}
 
 {% block col1 %}
@@ -276,6 +180,12 @@
         {% endfor %}
     </table>
 
+{% endblock %}
+
+{% block jsblock %}
+    <script>
+        modality = "DX";
+    </script>
 {% endblock %}
 
 {% block plotdata %}
