--- a/openrem/remapp/templates/base.html
+++ b/openrem/remapp/templates/base.html
@@ -142,6 +142,7 @@
                       <li><a href="{% url 'standard_names_view' %}">{% trans "Standard name mapping" %}</a></li>
                       {% if admin.admingroup %}
                           <li><a href="{% url 'task_admin' %}">{% trans "Tasks" %}</a></li>
+                          <li><a href="{% url 'background_task_settings' 1 %}">{% trans "Task settings" %}</a></li>
                       {% endif %}
                     </ul>
                 </li>
