Re-worded a sentence in the docs to avoid the need for another comma. Added specific link to the task management docs in the task history limit form, and updated the docs link for the task_admin page. Refs issue #964

--- a/openrem/remapp/templates/remapp/backgroundtaskmaximumrows_form.html
+++ b/openrem/remapp/templates/remapp/backgroundtaskmaximumrows_form.html
@@ -4,7 +4,7 @@
 
 {% block navhelp %}
         <li>
-            <a href="https://docs.openrem.org/en/{{ admin.docsversion }}"
+            <a href="https://docs.openrem.org/en/{{ admin.docsversion }}/task-management.html"
                target="_blank" data-toggle="tooltip" title="OpenREM documentation - opens in a new tab">
                 OpenREM
             </a>
