Updating title of documentation links [skip ci]. Refs issue #964

--- a/openrem/remapp/templates/remapp/backgroundtaskmaximumrows_form.html
+++ b/openrem/remapp/templates/remapp/backgroundtaskmaximumrows_form.html
@@ -5,8 +5,8 @@
 {% block navhelp %}
         <li>
             <a href="https://docs.openrem.org/en/{{ admin.docsversion }}/task-management.html"
-               target="_blank" data-toggle="tooltip" title="OpenREM documentation - opens in a new tab">
-                OpenREM
+               target="_blank" data-toggle="tooltip" title="Task management documentation - opens in a new tab">
+                Task management documentation
             </a>
         </li>
 {% endblock %}
