--- a/openrem/remapp/templates/remapp/task_admin.html
+++ b/openrem/remapp/templates/remapp/task_admin.html
@@ -10,8 +10,8 @@
 {% block navhelp %}
   <li>
     <a href="https://docs.openrem.org/en/{{ admin.docsversion }}/task-management.html"
-       target="_blank" data-toggle="tooltip" title="Celery management documentation - opens in a new tab">
-      Celery management documentation
+       target="_blank" data-toggle="tooltip" title="Task management documentation - opens in a new tab">
+      Task management documentation
     </a>
   </li>
 {% endblock %}
