--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -99,7 +99,7 @@
                                         {% if field.name != "o" %}
                                             <div class="row form-group">
                                                 <div class="col-xs-4">
-                                                    <label for="{{ field.auto_id }}">{{ field.label_tag }}</label>
+                                                    {{ field.label_tag }}
                                                 </div>
                                                 {% if not field.field.widget.attrs.static_lookup %}
                                                     <div class="col-xs-1">
