--- a/openrem/remapp/templates/remapp/filteredbase.html
+++ b/openrem/remapp/templates/remapp/filteredbase.html
@@ -117,7 +117,7 @@
                                                         </div>
                                                         <div class="col-xs-4">
                                                     {% else %}
-                                                        <div class="col-xs-offset-1 col-xs-7">
+                                                        <div class="col-xs-offset-1 col-xs-7 text-center">
                                                     {% endif %}
                                                         {{ field.errors }}
                                                         {{ field }}
